--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,5 @@ src/.ipynb_checkpoints
 src/rcy3-connect.R
 src/db_connect.R
 src/test.R
-WGCNA_LOG/
-ML_LOG/
+WGCNA_RRA_RESULT/
 .ipynb_checkpoints/
