--- a/env/geo_py.yaml
+++ b/env/geo_py.yaml
@@ -279,6 +279,7 @@ dependencies:
     - pygments==2.12.0
     - pyjwt==2.3.0
     - pyldavis==3.2.2
+    - pymysql==1.0.2
     - pynacl==1.5.0
     - pynndescent==0.5.6
     - pyod==1.0.0
@@ -300,6 +301,7 @@ dependencies:
     - ray==1.12.0
     - regex==2022.4.24
     - requests-oauthlib==1.3.1
+    - retry==0.9.2
     - retrying==1.3.3
     - rsa==4.8
     - s3transfer==0.5.2
@@ -315,6 +317,7 @@ dependencies:
     - setuptools==60.10.0
     - sklearn==0.0
     - skope-rules==1.0.1
+    - slack-sdk==3.17.0
     - smart-open==6.0.0
     - smmap==5.0.0
     - sniffio==1.2.0
